# personas-vorys

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
create_persona/: __init__.py  create_persona.py
data/personas/alycia/: persona.txt
data/personas/alycia/t1/: claude-sonnet-4_alycia_analysis.json  claude-sonnet-4_bill_analysis.json  claude-sonnet-4_mark_analysis.json  gemini-2.5-pro_alycia_analysis.json  gemini-2.5-pro_bill_analysis.json  gemini-2.5-pro_mark_analysis.json  gpt-4.1_alycia_analysis.json  gpt-4.1_bill_analysis.json  gpt-4.1_mark_analysis.json  strategy_chunks.json  transcript.txt
data/personas/alycia/t10/: strategy_chunks.json  transcript.txt
data/personas/alycia/t11/: claude-sonnet-4_alycia_analysis.json  claude-sonnet-4_bill_analysis.json  claude-sonnet-4_mark_analysis.json  gemini-2.5-pro_alycia_analysis.json  gemini-2.5-pro_bill_analysis.json  gemini-2.5-pro_mark_analysis.json  gpt-4.1_alycia_analysis.json  gpt-4.1_bill_analysis.json  gpt-4.1_mark_analysis.json  strategy_chunks.json  transcript.txt
data/personas/alycia/t12/: strategy_chunks.json  transcript.txt
data/personas/alycia/t2/: claude-sonnet-4_alycia_analysis.json  (+10 more)
data/personas/bill/: persona.txt
data/personas/saramirez/: persona.txt  saramirez_interview.docx
sample_persona/: Sample Interview.docx  create_sample_persona.py  sample_interview.txt  sample_persona.txt  sample_persona_high.txt  sample_persona_minimal.txt
src/: compare_analyses.py  compare_multi_personas.py  create_chunks.py  cross_persona_analysis.py  llm_router.py  load_transcript.py  run_analysis.py
(+63 files in other folders)
